# itk

./: .gitignore  ChangeLog  Makefile.in  configure  configure.ac  configure.in  itkConfig.sh.in  pkgIndex.tcl.in  releasenotes.txt
.fossil-settings/: ignore-glob
demos/: itkedit
doc/: Archetype.n  Toplevel.n  itkvars.n
examples/: Info.itk  MessageInfo.itk  TextDisplay.itk  TextInfo.itk  viewfile
generic/: itk.decls  itk.h  itkArchBase.c  itkArchetype.c  itkBase.c  itkCmd.c  itkDecls.h  itkHelpers.c  itkInt.h  itkIntDecls.h  itkOption.c  itkStubInit.c  itkStubLib.c  itkUtil.c  itk_archetype.c  itk_cmds.c  itk_option.c  itk_util.c
glmwfw/: Makefile.in  configure.in  pkgIndex.tcl.in  tg1.tcl  tg_util.tcl
glmwfw/generic/: glmwfw.h  glmwfwBase.c  glmwfwCmd.c  glmwfwEnable.c  glmwfwFullscreen.c  glmwfwGlext.c  glmwfwInit.c  glmwfwInput.c  glmwfwInt.h  glmwfwJoystick.c  glmwfwMaps.c  glmwfwPlatform.h  glmwfwTime.c  glmwfwUtil.c  glmwfwWindow.c
glmwfw/tclconfig/: tcl.m4
glmwfwmacos/tclconfig/: tcl.m4
glmwfwmacosx/: Makefile.in  configure.in
glmwfwmacosx/tclconfig/: tcl.m4
glmwfwwin32/: Makefile.in  configure.in  pkgIndex.tcl.in
glmwfwwin32/generic/: platform.h  win32_base.c  win32_window.c
glmwfwwin32/tclconfig/: tcl.m4
glmwfwx11/: Makefile.in  configure  configure.in
glmwfwx11/generic/: platform.h  x11_base.c  x11_enable.c  x11_fullscreen.c  x11_glext.c  x11_init.c  x11_joystick.c  x11_keysym2unicode.c  x11_time.c  x11_window.c
glmwfwx11/tclconfig/: tcl.m4
mac/: MW_ItkHeader.pch  itkMacApplication.r  itkMacLibrary.r  itkMacResource.r  pkgIndex.tcl  tclIndex  tkMacAppInit.c
ntk/: Makefile.in  configure.in  pkgIndex.tcl.in
ntk/demos/: README.txt  button_1.tcl  buttonarray_1.tcl  checkbox_1.tcl  clock_1.tcl  entry_1.tcl  label_1.tcl  listbox_1.tcl  menu_1.tcl  spinbox_1.tcl  text_1.tcl
ntk/tclconfig/: tcl.m4
ntkGLWidget/: Makefile.in  configure.in  pkgIndex.tcl.in  tngw1.tcl
ntkGLWidget/generic/: ntkGLWidget.h  ntkGLWidgetBase.c  ntkGLWidgetCmd.c  ntkGLWidgetInt.h  ntkGLWidgetUtil.c
ntkGLWidget/tclconfig/: tcl.m4
ntkWidget/: Makefile.in  configure.in  ntkWidget.tcl  pkgIndex.tcl.in  tnw1.tcl  tnw2.tcl
ntkWidget/generic/: ntkWidget.h  ntkWidgetBase.c  ntkWidgetCmd.c  ntkWidgetFreeType.c  ntkWidgetInt.h  ntkWidgetUtil.c
ntkWidget/tclconfig/: tcl.m4
ntkWidgetImage/: Makefile.in  configure.in  pkgIndex.tcl.in  tnw2.tcl
ntkWidgetImage/generic/: ntkWidgetImage.h  ntkWidgetImageBase.c  ntkWidgetImageCmd.c  ntkWidgetImageFreeType.c  ntkWidgetImageInt.h  ntkWidgetImageUtil.c
ntkWidgetImage/tclconfig/: tcl.m4
tclGL/: Makefile  Makefile.in  configure.in  pkgIndex.tcl  pkgIndex.tcl.in  tg2.tcl  tg2_inc.tcl  tg3.tcl  tg3_inc.tcl  tg4.tcl  tg5.tcl  tg6.tcl  tg7.tcl  tg8.tcl  tg_input.tcl  tg_util.tcl
tclGL/generic/: tclGL.h  tclGLBase.c  tclGLCmd.c  tclGLCmdNames.c  tclGLDefineSizes.h  tclGLExtCmd.c  tclGLExtFuncs.c  tclGLExtMethodInfos.c  tclGLExtProcNames.c  tclGLFuncSizes.h  tclGLFuncs.c  tclGLHashTables.h  tclGLInitDefineGroupHashTables.c  tclGLInitFuncGroupHashTables.c  tclGLInitHashTables.c  tclGLInt.h  tclGLMethodInfos.c  tclGLMethodNames.c  tclGLProcNames.c  tclGLUtil.c  tclGLextCmd.c
tclGL/tclconfig/: tcl.m4
tclGL/tools/: genCSources.sh  getDefines.tcl  makeDefineGroups.tcl  makeExtDefineGroups.tcl  makeExtFuncGroups.tcl  makeFuncGroups.tcl  scanHeaderFile.tcl
tclGLFW/: Makefile  pkgIndex.tcl  tg1.tcl  tg2.tcl  tg_util.tcl
tclGLFW/generic/: tclGLFW.h  tclGLFWBase.c  tclGLFWCmd.c  tclGLFWInt.h  tclGLFWMaps.c  tclGLFWUtil.c
tclGLMWFW/: Makefile  pkgIndex.tcl  tg1.tcl  tg_util.tcl
tclGLMWFW/generic/: tclGLMWFW.h  tclGLMWFWBase.c  tclGLMWFWCmd.c  tclGLMWFWEnable.c  tclGLMWFWFullscreen.c  tclGLMWFWGlext.c  tclGLMWFWInit.c  tclGLMWFWInput.c  tclGLMWFWInt.h  tclGLMWFWJoystick.c  tclGLMWFWMaps.c  tclGLMWFWPlatform.h  tclGLMWFWTime.c  tclGLMWFWUtil.c  tclGLMWFWWindow.c
tclGLMWFW/x11/: Makefile  pkgIndex.tcl  platform.h  x11_base.c  x11_enable.c  x11_fullscreen.c  x11_glext.c  x11_init.c  x11_joystick.c  x11_keysym2unicode.c  x11_time.c  x11_window.c
tests/: all.tcl  defs  interp.test  option.test  privacy.test  public.test  toplevel.test  widget.test
unix/: Makefile.in  configure.in  itkConfig.sh  tkAppInit.c
win/: itkUuid.h.in  makefile.vc  nmakehlp.c  pkgIndex.tcl  winMain.c
win/rc/: cursor2a.cur  cursor44.cur  cursor76.cur  cursor7c.cur  cursor8e.cur  itk.rc  itkwish.rc
